--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/style.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/style.scss
@@ -1,4 +1,4 @@
-@mixin backgroundsettings{
+@mixin backgroundsettings {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
@@ -34,13 +34,13 @@
         background: url(http://en.fusushi.co.il/warehouse/dynamic/55244.jpg);
         @include backgroundsettings;
     }
-    
+
     100% {
         background: url(http://www.fusushi.co.il/warehouse/dynamic/50913.jpg);
         @include backgroundsettings;
     }
 
-    
+
 }
 
 
@@ -74,7 +74,7 @@ body {
     min-height: 100vh;
 
     background: black;
-        // url(http://en.fusushi.co.il/warehouse/dynamic/55244.jpg);
+    // url(http://en.fusushi.co.il/warehouse/dynamic/55244.jpg);
     // url(http://www.fusushi.co.il/warehouse/dynamic/50916.jpg),
     // url(http://en.fusushi.co.il/warehouse/dynamic/55244.jpg);
 
@@ -323,5 +323,72 @@ body {
                 transform: scale(1.1);
             }
         }
+    }
+}
+
+//-------------Menu-------------//
+
+.menu {
+    
+    background: url("https://www.seekpng.com/png/detail/286-2863479_geisha-png-pic-geisha-png.png");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    background-position: center center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    min-height: 100vh;
+    color: rgb(144, 140, 140);
+
+
+    &__title {
+        color: white;
+        margin-top: 2rem;
+        font-size: 3rem;
+        font-weight: 600;
+        &::after {
+            content: '';
+            height: 2px;
+            width: 60px;
+            background: #ed3524;
+            display: block;
+            margin: 2px auto 0;
+        }
+    }
+    &__box{
+        display: grid;
+        grid-template-rows: repeat(3,250px);
+        grid-template-columns: repeat(6,1fr);
+        gap:15px;
+        align-items: center;
+        
+    }
+
+    &__cell{
+        margin-top: 2rem;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
+        background-position: center center;
+        width: 12rem;
+        height: 15rem;
+        border-radius: 30%;
+        img{
+            width: 100%;
+            height: 80%;
+            border-radius: 40%;
+            &:hover {
+                cursor: pointer;
+                transform: scale(1.1);
+            }
+        }
+        p{
+            padding-top: 0.8rem;
+            text-shadow: 1px 1px 3px black;
+        }
+        
     }
 }
