--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/style.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/style.scss
@@ -215,8 +215,20 @@ body {
 
         &__price {
             color: black;
+        }
+        .USD{
             &::after{
                 content: ' $';
+            }
+        }
+        .EUR{
+            &::after{
+                content: ' €';
+            }
+        }
+        .GBP{
+            &::after{
+                content: ' £';
             }
         }
     }
@@ -269,4 +281,21 @@ body {
         border-radius: 40px;
     }
 
+}
+
+////OWNER
+#root{
+
+    .card{
+        display: flex;
+        align-items: center;
+        p{
+            border: 1px solid black;
+            width: 400px;
+            margin-inline: 20px;
+        }
+        img{
+            width: 75px;
+        }
+    }
 }
