--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Room2/style.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Room2/style.scss
@@ -63,15 +63,25 @@
 }
 
 .cards {
-  display:grid;
-  grid-template-rows:repeat(3, 1fr) ;
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
   grid-template-columns: repeat(4, 1fr);
   border: 1px solid black;
   &__item {
-width: 330px;
-height:450px;
-border: 1px solid black;
-
+    width: 330px;
+    height: 450px;
+    border: 1px solid black;
+    & .picture {
+      img {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        :nth-child(1){
+          bottom:0;
+          position: absolute;
+        }
+      }
+      
+    }
   }
-
 }
