--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Yossi_Yael_Will_Artur/style.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Yossi_Yael_Will_Artur/style.scss
@@ -2,4 +2,11 @@
     display: flex;
     border: solid black;
     justify-content: center;
+    &__navbartop
+
+
+    &__Gucci{
+        font-size: 4rem;
+
+    }
 }
