--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/chaim , michael ido/taskFilter.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/chaim , michael ido/taskFilter.scss
@@ -295,6 +295,9 @@
             background-position: center;
             background-size: contain;
             background-repeat: no-repeat;
+            &:hover{transform : scale(1.2);
+
+            }
         }
 
         &-display {
@@ -325,10 +328,13 @@
                 &-img{
                     height: 100%;
                     grid-column: 2/3;
-                    // border-left: 1px dotted black;
+                    border-left: 1px dotted black;
                     background-position: center;
                     background-size: contain;
                     background-repeat: no-repeat;
+                    
+                    
+                    
                 }
             }
         }
@@ -360,6 +366,7 @@
         }
     }
     &-select{
+        border-radius: 15%;
         font-size: 12px;
         font-weight: bold;
         box-shadow: rgba(40, 40, 41, 0.85) 0px 30px 60px -12px inset,rgba(25, 34, 153, 0.8) 0px 18px 36px 30px inset;
