--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/chaim , michael ido/taskFilter.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/chaim , michael ido/taskFilter.scss
@@ -306,9 +306,9 @@
             margin-top: 5px;
             border: 1px solid rgb(197, 187, 187);
             display: flex;
-            flex-direction: column;
+            flex-direction: row;
             column-gap: 5px;
-            overflow: auto;
+            overflow-X: auto; 
             white-space: nowrap;
 
             &-card{
@@ -323,6 +323,7 @@
                 &-details{
                     height: 100%;
                     grid-column: 1/2;
+                    text-align: center;
                 }
 
                 &-img{
