--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/yahia,michael,leon/style.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/yahia,michael,leon/style.scss
@@ -91,6 +91,10 @@
     }
 }
 .card{
-    color: red
-    
+    color: rgb(0, 0, 0);
+    width: 130px;
+    height: 130px;
+    border: 1px solid black;
+    background-color: blanchedalmond;
 }
+
