photo hover try

--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/style.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/style.scss
@@ -117,7 +117,7 @@ $border:solid 3px black;
 }
 
 .catergory__buttons {
-  
+
   display: inline-flex;
   background-color: beige;
   justify-content: center;
@@ -130,7 +130,7 @@ $border:solid 3px black;
 
 
   &--selector {
-    cursor:pointer;
+    cursor: pointer;
     width: 10em;
     height: 3em;
     border: $border;
@@ -144,14 +144,14 @@ $border:solid 3px black;
   }
 
   &--sortPrice {
-    
+
     display: inline-flex;
     gap: 6em;
     width: 25em;
     height: 3em;
 
     button {
-      cursor:pointer;
+      cursor: pointer;
       border: $border;
       font-weight: bold;
     }
@@ -165,7 +165,7 @@ $border:solid 3px black;
     font-weight: bold;
 
     .inputLowerThan {
-      cursor:pointer;
+      cursor: pointer;
       border: $border;
       font-weight: bold;
 
@@ -178,15 +178,53 @@ $border:solid 3px black;
   margin-top: 4em;
   background-color: white;
   height: 100em;
-   text-align: center;
- // display:grid;
-  gap:2em;
+  text-align: center;
+  // display:grid;
+  gap: 2em;
   display: inline-grid;
-  grid-template-columns: repeat(3,30em);
-  grid-template-rows: repeat(4,25em);
+  grid-template-columns: repeat(3, 30em);
+  grid-template-rows: repeat(4, 25em);
 
   .itemSilkDress {
     color: black;
 
+  }
+
+  // .itemSilkDressTest {
+  //   background: url("https://media.gucci.com/style/DarkGray_South_0_160_316x316/1635527707/664317_Z8AWG_9791_001_100_0000_Light-Belted-optical-print-silk-dress.jpg") no-repeat;
+  //   display: inline-block;
+
+  //   &:hover {
+
+  //     height: 20em;
+  //     background: url("https://media.gucci.com/style/White_South_0_40_632x790/1635527709/664317_Z8AWG_9791_002_100_0000_Light.jpg") no-repeat;
+  //   }
+  // }
+
+  .itemSilkDressTest {
+   
+    width: 100px;
+    height: 200px;
+    position: relative;
+    display: inline-block;
+    
+
+    .img-top {
+      display: none;
+      position: absolute;
+      height: 300px;
+      top: 0;
+      //left: 0;
+      z-index: 1;
+      border:solid 2px black;
+    }
+
+    &:hover .img-top {
+      display: inline;
+      width: 20em;
+      height: 400px;
+     
+      
+    }
   }
 }
