--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/chaim , michael ido/taskFilter.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/chaim , michael ido/taskFilter.scss
@@ -230,6 +230,7 @@
             grid-row: 1/4;
             grid-column: 1/2;
             height: 10vh;
+            margin-top: -1vh;
         }
 
         &-search {
@@ -239,11 +240,14 @@
             justify-content: center;
 
             & input {
+                margin-top: 1vh;
+
                 width: 100%;
-                height: 90%;
+                height: 50%;
                 align-self: center;
                 background-color: blanchedalmond;
                 border-radius: 10px;
+
 
             }
         }
