--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Etan Omri John/bokkie.scss
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Etan Omri John/bokkie.scss
@@ -1,3 +1,27 @@
 body{
+  margin: auto;  
+  max-width: 600px;
+}
+.navBar{
+    height: 5vh;
+    background-color: black;
+    display: flex;
+    color: white;
+    
+    
+    &__menu{
+
+    }
+    &__logo{
+        width: 30vw;
+        text-align: center;
+        
+    }
+    &__item{
+
+    }
+}
+.banner{
+    width: 400px;
     
 }
